[package]
name = "log4you"
version = "0.1.0"
edition = "2024"
authors = ["Jerry Maheswara<jerrymaheswara@gmail.com>"]
description = "Rust structured logging with dynamic UUID log IDs, built on log4rs. Plug and play!"
license = "Apache-2.0"
repository = "https://github.com/jerry-maheswara-github/log4you"
readme = "README.md"
documentation = "https://docs.rs/log4you"
keywords = ["logging", "log4rs", "uuid", "macro", "tracing"]
categories = ["development-tools"]

[dependencies]
log = "0.4.27"
log4rs = "1.3.0"
uuid = { version = "1.16.0", features = ["v7"] }
once_cell = "1.21.3"
